[package]
name = "madara_cli_core"
version = "0.1.0"
edition = "2021"

[dependencies]
structopt = "0.3"
tokio = { version = "1", features = ["full"] }
url = "2.3.1"

starknet = { git = "https://github.com/xJonathanLEI/starknet-rs" }
starknet-crypto = { git = "https://github.com/xJonathanLEI/starknet-rs", package = "starknet-crypto" }